--- a/Sample with noise.ipynb
+++ b/Sample with noise.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import reflexxes\n",
     "import random\n",
-    "import pandas as pd\n",
+    "#import pandas as pd\n",
     "from numpy import genfromtxt\n",
     "\n",
     "# visualiation\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_trajectory_recur(gen, count=0, position=None, velocity=None, acceleration=None):\n",
+    "    # set initial values\n",
+    "    gen.current_position = position[-1] if position else generate_random_variable(0, 100)\n",
+    "    gen.current_velocity = velocity[-1] if velocity else generate_random_variable(-10, 10)\n",
+    "    gen.current_acceleration = acceleration[-1] if acceleration else generate_random_variable(0, 5)\n",
+    "\n",
+    "    position = position or [gen.current_position.tolist()]\n",
+    "    velocity = velocity or [gen.current_velocity.tolist()]\n",
+    "    acceleration = acceleration or [gen.current_acceleration.tolist()]\n",
+    "\n",
+    "    target_position = generate_random_variable(0, 100)\n",
+    "    target_velocity = generate_random_variable(-10, 10)\n",
+    "    \n",
+    "    # generate trajectory\n",
+    "    for pos, vel, acc in gen.trajectory(target_position, target_velocity, 1):\n",
+    "        '''\n",
+    "        auto trajectory(const RMLDoubleVector& target_position,\n",
+    "                    const RMLDoubleVector& target_velocity,\n",
+    "                    double min_sync_time = 0.0)\n",
+    "                    '''\n",
+    "        position.append(pos)\n",
+    "        velocity.append(vel)\n",
+    "        acceleration.append(acc)\n",
+    "        \n",
+    "    if count == 0:\n",
+    "        return position, velocity, acceleration\n",
+    "    else:\n",
+    "        return generate_trajectory_recur(gen, count - 1, position, velocity, acceleration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p, v, a = generate_trajectory_recur(gen, 64)\n",
+    "plot_trajectory(p, \"connected\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
