--- a/May03_5x5x5.ipynb
+++ b/May03_5x5x5.ipynb
@@ -255,7 +255,9 @@
     "# try label no. = 10\n",
     "\n",
     "init_mean = []\n",
-    "num = 5 # number of component in each diagonal\n",
+    "\n",
+    "# number of component in each diagonal\n",
+    "num = 5 \n",
     "\n",
     "for i in range(num):\n",
     "    for j in range(num):\n",
@@ -344,8 +346,8 @@
     "#replace = org_p_spl[select_traj]\n",
     "#replacenew = connected_me[::10]\n",
     "#replace = replacenew[0:100]\n",
-    "replace = nos_p_1[0:1000]\n",
-    "real= org_p[0:1000]\n",
+    "replace = nos_p_1[0:1000] # noisy data\n",
+    "real= org_p[0:1000] #clean data\n",
     "\n",
     "pred = HMM_10.predict(replace)\n",
     "orig_rd = np.ceil(real/20)*20-10\n",
