--- a/May03_5x5x5.ipynb
+++ b/May03_5x5x5.ipynb
@@ -21,7 +21,9 @@
     "from hmmlearn import hmm\n",
     "from scipy.optimize import linear_sum_assignment\n",
     "from sklearn.metrics.pairwise import euclidean_distances\n",
-    "import datetime"
+    "import datetime\n",
+    "\n",
+    "import pickle"
    ]
   },
   {
@@ -30,17 +32,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load data\n",
-    "org_p = np.loadtxt('../Trajectory/data/original_position_list.csv', delimiter=' ')\n",
-    "org_v = np.loadtxt('../Trajectory/data/original_velocity_list.csv', delimiter=' ')\n",
-    "nos_p_001 = np.loadtxt('../Trajectory/data/position_noise_0.01.csv', delimiter=' ')\n",
-    "nos_p_01 = np.loadtxt('../Trajectory/data/position_noise_0.1.csv', delimiter=' ')\n",
-    "nos_p_1 = np.loadtxt('../Trajectory/data/position_noise_1.csv', delimiter=' ')\n",
-    "connected_me = np.loadtxt('../Trajectory/data/connected_me.csv', delimiter=' ')\n",
+    "# load  clean data\n",
     "\n",
-    "traj_lens = np.loadtxt('../Trajectory/data/traj_lens.csv', delimiter=' ')\n",
-    "traj_lens = traj_lens.astype(int)\n",
-    "      "
+    "# load noisy data\n",
+    "org_p = np.loadtxt('../Trajectory/data0503/original_position_list.csv', delimiter=' ')\n",
+    "#org_v = np.loadtxt('../Trajectory/data0503/original_velocity_list.csv', delimiter=' ')\n",
+    "nos_p_01 = np.loadtxt('../Trajectory/data0503/position_noise_0.1.csv', delimiter=' ')\n",
+    "nos_p_1 = np.loadtxt('../Trajectory/data0503/position_noise_1.csv', delimiter=' ')\n",
+    "nos_p_2 = np.loadtxt('../Trajectory/data0503/position_noise_2.csv', delimiter=' ')\n",
+    "nos_p_5 = np.loadtxt('../Trajectory/data0503/position_noise_5.csv', delimiter=' ')\n",
+    "\n",
+    "traj_lens = np.loadtxt('../Trajectory/data0503/traj_lens.csv', delimiter=' ')\n",
+    "traj_lens = traj_lens.astype(int)"
    ]
   },
   {
@@ -66,16 +69,17 @@
     "traj_lens_cumsum = np.delete(traj_lens_cumsum, len(traj_lens_cumsum) - 1)\n",
     "\n",
     "org_p_spl = np.split(org_p, traj_lens_cumsum, axis=0)\n",
-    "org_v_spl = np.split(org_v, traj_lens_cumsum, axis=0)\n",
-    "nos_p_001_spl = np.split(nos_p_001, traj_lens_cumsum, axis=0)\n",
+    "#org_v_spl = np.split(org_v, traj_lens_cumsum, axis=0)\n",
     "nos_p_01_spl = np.split(nos_p_01, traj_lens_cumsum, axis=0)\n",
     "nos_p_1_spl = np.split(nos_p_1, traj_lens_cumsum, axis=0)\n",
+    "nos_p_2_spl = np.split(nos_p_2, traj_lens_cumsum, axis=0)\n",
+    "nos_p_5_spl = np.split(nos_p_5, traj_lens_cumsum, axis=0)\n",
     "\n",
     "print(f'org_p.size: {len(org_p_spl)}')\n",
-    "print(f'org_v.size: {len(org_v_spl)}')\n",
-    "print(f'nos_p_001.size: {len(nos_p_001_spl)}')\n",
-    "print(f'nos_p_01.size: {len(nos_p_01_spl)}')\n",
-    "print(f'nos_p_1.size: {len(nos_p_1_spl)}')"
+    "print(f'nos_p_01_spl.size: {len(nos_p_01_spl)}')\n",
+    "print(f'nos_p_1_spl.size: {len(nos_p_1_spl)}')\n",
+    "print(f'nos_p_2_spl.size: {len(nos_p_2_spl)}')\n",
+    "print(f'nos_p_5_spl.size: {len(nos_p_5_spl)}')"
    ]
   },
   {
@@ -189,9 +193,10 @@
     "# plot 1st trajectory \n",
     "plot_trajectory(nos_p_1, 'all noise')\n",
     "plot_trajectory(org_p_spl[0], '1st Original Trajectory')\n",
-    "plot_trajectory(nos_p_001_spl[0], '1st Noise Trajectory 0.01')\n",
     "plot_trajectory(nos_p_01_spl[0], '1st Noise Trajectory 0.1')\n",
-    "plot_trajectory(nos_p_1_spl[0], '1st Noise Trajectory 1')"
+    "plot_trajectory(nos_p_1_spl[0], '1st Noise Trajectory 1')\n",
+    "plot_trajectory(nos_p_2_spl[0], '1st Noise Trajectory 2')\n",
+    "plot_trajectory(nos_p_5_spl[0], '1st Noise Trajectory 5')"
    ]
   },
   {
@@ -256,7 +261,7 @@
     "\n",
     "init_mean = []\n",
     "\n",
-    "# number of component in each diagonal\n",
+    "# Hui Min CHANGE ME~~ : number of component in each diagonal\n",
     "num = 5 \n",
     "\n",
     "for i in range(num):\n",
@@ -266,7 +271,7 @@
     "#print(init_mean)   \n",
     "\n",
     "a = datetime.datetime.now()\n",
-    "HMM_10 = hmm.GaussianHMM(n_components=125, covariance_type=\"spherical\", init_params=\"sct\", params=\"sct\", n_iter=len(traj_lens), verbose=True)\n",
+    "HMM_10 = hmm.GaussianHMM(n_components=num**3, covariance_type=\"spherical\", init_params=\"sct\", params=\"sct\", n_iter=len(traj_lens), verbose=True)\n",
     "HMM_10.means_ = init_mean\n",
     "HMM_10.fit(org_p, traj_lens)\n",
     "b = datetime.datetime.now()\n",
@@ -340,14 +345,12 @@
     }
    ],
    "source": [
-    "#select_traj = 77\n",
-    "connected_me = np.loadtxt('../Trajectory/data/connected_me.csv', delimiter=' ')\n",
+    "select_traj = 0\n",
     "\n",
-    "#replace = org_p_spl[select_traj]\n",
-    "#replacenew = connected_me[::10]\n",
-    "#replace = replacenew[0:100]\n",
-    "replace = nos_p_1[0:1000] # noisy data\n",
-    "real= org_p[0:1000] #clean data\n",
+    "# load noise data for predict\n",
+    "replace = nos_p_01_spl[select_traj] \n",
+    "# load clean data for comparison\n",
+    "real= org_p_spl[select_traj]    \n",
     "\n",
     "pred = HMM_10.predict(replace)\n",
     "orig_rd = np.ceil(real/20)*20-10\n",
@@ -384,21 +387,7 @@
     }
    ],
    "source": [
-    "\n",
-    "plot_trajectory(org_p, 'all data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "with open(\"May03_5x5x5.pkl\", \"wb\") as file: pickle.dump(HMM_10, file)\n",
-    "#with open(\"filename.pkl\", \"rb\") as file: pickle.load(file)\n",
-    "#GaussianHMM(algorithm='viterbi', ..."
+    "#plot_trajectory(org_p, 'all data') # overall data"
    ]
   },
   {
@@ -415,6 +404,7 @@
     }
    ],
    "source": [
+    "# Accuracy (%)\n",
     "traj = real\n",
     "labels = np.zeros(len(traj))\n",
     "\n",
@@ -427,6 +417,19 @@
     "    labels[i] = closest_node(data,init_mean)\n",
     "\n",
     "print(\"model accuracy is: \", np.mean(labels == HMM_10.predict(traj)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export model\n",
+    "\n",
+    "with open(\"May03_5x5x5.pkl\", \"wb\") as file: pickle.dump(HMM_10, file)\n",
+    "# use below to import   \n",
+    "#with open(\"filename.pkl\", \"rb\") as file: HMM_10 = pickle.load(file)\n"
    ]
   }
  ],
