--- a/May03_5x5x5.ipynb
+++ b/May03_5x5x5.ipynb
@@ -273,6 +273,8 @@
     "a = datetime.datetime.now()\n",
     "HMM_10 = hmm.GaussianHMM(n_components=num**3, covariance_type=\"spherical\", init_params=\"sct\", params=\"sct\", n_iter=len(traj_lens), verbose=True)\n",
     "HMM_10.means_ = init_mean\n",
+    "\n",
+    "# fit data: change me (org_p) to nos_p_01\n",
     "HMM_10.fit(org_p, traj_lens)\n",
     "b = datetime.datetime.now()\n",
     "print(b-a)"
